@@ -1,5 +1,6 @@
 package io.repaint.maven.tiles
 
+import org.apache.maven.MavenExecutionException
 import org.apache.maven.plugin.MojoExecutionException
 import org.apache.maven.plugin.MojoFailureException
 import org.apache.maven.plugins.annotations.Component
@@ -15,6 +16,7 @@ import org.apache.maven.project.MavenProjectHelper
  */
 @Mojo(name = "attach-tile", requiresProject = true, requiresDependencyResolution = ResolutionScope.NONE, defaultPhase = LifecyclePhase.PACKAGE)
 class AttachTileMojo extends AbstractTileMojo {
+
 	@Component
 	MavenProjectHelper projectHelper
 
@@ -26,12 +28,12 @@ class AttachTileMojo extends AbstractTileMojo {
 
 		File tile = getTile()
 
-		if (new TileValidator().loadModel(logger, tile)) {
+		if (new TileValidator().loadModel(logger, tile, buildSmells) != null) {
 			projectHelper.attachArtifact(project, "pom", "tile-pom", tile)
 
 			logger.info("Tile: attaching tile ${tile.path}")
 		} else {
-			throw new MojoFailureException("There is no tile called ${tile.path}!")
+			throw new MojoFailureException("Unable to validate tile ${tile.path}!")
 		}
 
 	}
